--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -55,7 +55,7 @@
 							<article id="onions">
 								<h2 class="major">Tor Onion Services</h2>
 								<p>This site is available as a Tor Onion Service at:</p>
-								<p><center><b>7h4hhpykscqbstlboqey4dbncrxd2cjbtfs3bnljvopcn4h6by4ngiad.onion</b></center></p>
+								<p><center><b>7wmqyy4uj5swknxz4awtuzdgn3fpaxakn7sujgumrskeg35wzg6afpad.onion</b></center></p>
 								<p>Onion Services are special web addresses that are understood by the Tor anonymity software and can be accessed using the <a target="_blank" rel="noopener noreferrer" href="https://www.torproject.org/">Tor Browser</a>.</p>
 								<p>Onion domains provide a number of security benefits over regular domains, such as:</br>
 								&nbsp;&bull;&nbsp;&nbsp;Additional privacy</br>
@@ -70,7 +70,7 @@
 						<!-- OpenBSD -->
 							<article id="openbsd">
 								<h2 class="major">OpenBSD</h2>
-								<p>This site is currently served from a VPS running <a target="_blank" rel="noopener noreferrer" href="https://www.openbsd.org/">OpenBSD</a> and uses the native <b>httpd</b> as a webserver, along with <b>pf</b> as a firewall. Both packages are included in the base install of OpenBSD. Only one aditional package &mdash; <b>tor</b> &mdash; has been installed on the system.
+								<p>This site is currently served from a VPS running <a target="_blank" rel="noopener noreferrer" href="https://www.openbsd.org/">OpenBSD</a> and uses the native <b>httpd</b> as a webserver, along with <b>pf</b> as a firewall. Both packages are included in the base install of OpenBSD. Only one aditional package &ndash; <b>tor</b> &ndash; has been installed on the system.
 								<h3>httpd</h3>
 								<p>The base installation of OpenBSD ships with <b><a target="_blank" rel="noopener noreferrer" href="https://bsd.plumbing/">httpd</a></b>, a lightweight and full-featured secure webserver. (Not to be confused with the similarly-named <a target="_blank" rel="noopener noreferrer" href="https://httpd.apache.org/">Apache httpd</a>).</p>
 								<p><b>httpd</b> is an incredibly powerful webserver which can be surprisingly easily configured. It uses the OpenBSD project's <a target="_blank rel="noopener noreferrer" href="https://www.libressl.org/">LibreSSL</a> to handle encryption.</p>
