--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<!-- OpenBSD -->
 							<article id="openbsd">
 								<h2 class="major">OpenBSD</h2>
-								<p>This site is currently served from a VPS running <a target="_blank" rel="noopener noreferrer" href="https://www.openbsd.org/">OpenBSD</a> and uses the native <b>httpd</b> as a webserver, along with <b>pf</b> as a firewall. Both packages are included in the base install of OpenBSD. Only one aditional package &ndash; <b>tor</b> &ndash; has been installed on the system.
+								<p>The onion version of this site is currently served from a VPS running <a target="_blank" rel="noopener noreferrer" href="https://www.openbsd.org/">OpenBSD</a> and uses the native <b>httpd</b> as a webserver, along with <b>pf</b> as a firewall. Both packages are included in the base install of OpenBSD. Only one aditional package &ndash; <b>tor</b> &ndash; has been installed on the system. The clearnet version of the site is hosted using GitHub Pages.
 								<h3>httpd</h3>
 								<p>The base installation of OpenBSD ships with <b><a target="_blank" rel="noopener noreferrer" href="https://bsd.plumbing/">httpd</a></b>, a lightweight and full-featured secure webserver. (Not to be confused with the similarly-named <a target="_blank" rel="noopener noreferrer" href="https://httpd.apache.org/">Apache httpd</a>).</p>
 								<p><b>httpd</b> is an incredibly powerful webserver which can be surprisingly easily configured. It uses the OpenBSD project's <a target="_blank rel="noopener noreferrer" href="https://www.libressl.org/">LibreSSL</a> to handle encryption.</p>
